--- a/client/src/styles/pages/_Message.scss
+++ b/client/src/styles/pages/_Message.scss
@@ -10,7 +10,7 @@
     position: absolute;
     margin: auto;
     inset: 0 0 0 0;
-    width: 70%;
+    width: 60%;
     height: 94%;
     border-radius: 5px;
     display: flex;
@@ -86,27 +86,6 @@
         color: #ccc;
         font-size: 1.5rem;
         text-align: center;
-      }
-
-      .chat__test{
-        border: 1px solid #ccc;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        display: flex;
-        height: 7%;
-
-        .input-box{
-          resize: none;
-          width: 100%;
-          padding: 1.5% .5%;
-          display: block;
-        }
-
-        .input-box-enter{
-          width: 10%;
-        }
       }
     }
   }
